rhai/codegen/ui_tests/non_clonable.stderr
error[E0277]: the trait bound `NonClonable: Clone` is not satisfied
  --> $DIR/non_clonable.rs:11:23
   |
11 | pub fn test_fn(input: NonClonable) -> bool {
   |                       ^^^^^^^^^^^ the trait `Clone` is not implemented for `NonClonable`
